--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <li><a href="profile.html">Profile</a></li>
     <li><a href="cart.html">Cart 🛍️</a></li>
   </ul>
+  <!-- E-commerce image block -->
+<figure style="max-width: 220px; margin: 8px auto; padding: 0;">
+  <img
+    src="https://source.unsplash.com/featured/?ecommerce,shopping"
+    loading="lazy"
+    style="width: 100%; height: auto; border-radius: 10px; display: block; box-shadow: 0 8px 30px rgba(0,0,0,.12);"
+    onerror="this.onerror=null; this.src='https://picsum.photos/1200/700?blur=2';"
+  />
+  <figcaption style="font: 14px/1.4 system-ui, Arial, sans-serif; color:#555; text-align:center; margin-top:10px;">
+    Shop the latest deals &mdash; secure checkout.
+  </figcaption>
+</figure>
 
   <!-- Hamburger (for mobile) -->
   <div class="hamburger" id="hamburger">&#9776;</div>
@@ -54,6 +66,8 @@
       <a href="https://www.nykaa.com" target="_blank" class="card">Nykaa</a>
       <a href="https://www.sugarcosmetics.com" target="_blank" class="card">Sugar</a>
       <a href="https://www.lakmeindia.com" target="_blank" class="card">Lakme</a>
+      <a href="https://www.purplle.com" target="_blank" class="card">Purplle</a>
+      <a href="https://www.dazller.com" target="_blank" class="card">Dazller</a>
     </div>
   </section>
 
@@ -65,7 +79,6 @@
       <a href="https://www.zomato.com" target="_blank" class="card">Zomato</a>
       <a href="https://www.dominos.co.in" target="_blank" class="card">Dominos</a>
       <a href="https://www.mcdonaldsindia.com" target="_blank" class="card">McDonald's</a>
-      <a href="https://www.kfc.co.in" target="_blank" class="card">KFC</a>
       <a href="https://www.pizzahut.co.in" target="_blank" class="card">Pizza Hut</a>
     </div>
   </section>
@@ -75,12 +88,34 @@
     <h2>Groceries</h2>
     <div class="grid">
       <a href="https://www.bigbasket.com" target="_blank" class="card">BigBasket</a>
-      <a href="https://www.grofers.com" target="_blank" class="card">Grofers</a>
+      <a href="https://www.blinkit.com" target="_blank" class="card">Blinkit</a>
       <a href="https://www.amazon.in/grocery" target="_blank" class="card">Amazon Grocery</a>
       <a href="https://www.zepto.com" target="_blank" class="card">Zepto</a>
     </div>
   </section>
 
+  <!--Kids Section-->
+  <section>
+    <h2>Kids</h2>
+    <div class="grid">
+      <a href="https://www.firstcry.com" target="_blank" class="card">FirstCry</a>
+      <a href="https://www.myntra.com/kids" target="_blank" class="card">Myntra Kids</a>
+      <a href="https://www.babycouture.in" target="_blank" class="card">Baby Couture</a>
+      </div>
+  </section>
+
+  <!-- Skin Care -->
+   <section>
+    <h2>Skin Care</h2>
+    <div class="grid">
+      <a href="https://www.beautybarn.in" target="_blank" class="card">Beauty Barn</a>
+      <a href="https://www.mamaearth.in" target="_blank" class="card">MamaEarth</a>
+      <a href="https://www.aqualogica.in" target="_blank" class="card">Aqualogica</a>
+      <a href="https://buydermdoc.com/" target="_blank" class="card">DermaDoc</a>
+      <a href="https://thedermaco.com/" target="_blank" class="card">The Derma Co</a>
+      </div>
+   </section>
+  
   <!-- Travel Section -->
   <section>
     <h2>Travel & Booking</h2>
@@ -88,6 +123,9 @@
       <a href="https://www.irctc.co.in" target="_blank" class="card">IRCTC</a>
       <a href="https://www.makemytrip.com" target="_blank" class="card">MakeMyTrip</a>
       <a href="https://www.yatra.com" target="_blank" class="card">Yatra</a>
+      <a href="https://www.uber.com" target="_blank" class="card">Uber</a>
+      <a href="https://www.olacabs.com" target="_blank" class="card">Ola</a>
+      <a href="https://www.rapido.bike" target="_blank" class="card">Rapido</a>
     </div>
   </section>
 
